# designpatterns

DesignPatterns/Projet 1-factory/FactoryMethod/: pom.xml
DesignPatterns/Projet 1-factory/FactoryMethod/src/main/java/org/example/: ChicagoPizzaStore.java  ChicagoStyleCheesePizza.java  ChicagoStyleClamPizza.java  ChicagoStylePepperoniPizza.java  ChicagoStyleVeggiePizza.java  NYPizzaStore.java  NYStyleCheesePizza.java  NYStyleClamPizza.java  NYStylePepperoniPizza.java  NYStyleVeggiePizza.java  Pizza.java  PizzaStore.java  PizzaTestDrive.java
DesignPatterns/Projet 2-decorator/Decorator/: pom.xml
DesignPatterns/Projet 2-decorator/Decorator/src/main/java/org/example/: Beverage.java  CondimentDecorator.java  DarkRoast.java  HouseBlend.java  Mocha.java  Soy.java  StarbuzzCoffee.java  Whip.java
DesignPatterns/Projet 3-observer/Observer/: pom.xml
DesignPatterns/Projet 4-designpatters/Devoir/: CMakeLists.txt  ColumnMatrix.cpp  ColumnMatrix.h  ConcreteMatrix.cpp  ConcreteMatrix.h  LogMatrixOperationsDecorator.cpp  LogMatrixOperationsDecorator.h  LoggingObserver.cpp  LoggingObserver.h  Matrix.cpp  Matrix.h  MatrixDecorator.cpp  MatrixDecorator.h  MatrixFactory.cpp  MatrixFactory.h  MatrixSubject.cpp  MatrixSubject.h  MatrixTest.cpp  MatrixTest.h  Observer.cpp  Observer.h  PrettyPrintMatrixDecorator.cpp  PrettyPrintMatrixDecorator.h  RandomNumberGenerator.cpp  RandomNumberGenerator.h  RectangularMatrix.cpp  RectangularMatrix.h  RowMatrix.cpp  RowMatrix.h  SquareMatrix.cpp  SquareMatrix.h  main.cpp
(+8 files in other folders)
